--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"react-responsive": "^9.0.2",
 		"react-router-dom": "^6.8.1",
 		"react-spinners": "^0.13.8",
+		"react-toastify": "^9.1.3",
 		"yup": "^1.0.0"
 	},
 	"devDependencies": {
